exporting JSON types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     ],
     "module": "commonjs",
     "target": "es2015",
+    "esModuleInterop": true,
     "types": [
       "jest",
       "node"
